<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <ImageView
        android:id="@+id/frag_listmain_iv_listimg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/frag_listmain_desc_iv"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/themeLightGrey"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top_1"
        android:orientation="horizontal">
        <TextView
            style="@style/AppTextTitleBigger"
            android:id="@+id/frag_listmain_tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top_2">

        <TextView
            style="@style/AppTextDetailBigger"
            android:id="@+id/frag_listmain_tv_detail"
            android:layout_marginBottom="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/frag_listmain_fab_starttour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/themeLightGreen"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/full_right_arrow"
        android:contentDescription="@string/frag_listmain_start_tour"
        android:focusable="true" />

    <androidx.cardview.widget.CardView
        android:id="@+id/frag_listmain_cv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/card_constraint"
                app:layout_constraintEnd_toStartOf="@id/frag_listmain_tv_progress_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/card_constraint" />

            <TextView
                android:id="@+id/frag_listmain_tv_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/frag_listmain_progress_text"
                app:layout_constraintBottom_toBottomOf="@id/card_constraint"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintStart_toEndOf="@+id/progressBar"
                app:layout_constraintTop_toTopOf="@id/card_constraint" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>